# test-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
backend_for_testing/: asgi.py  settings.py  settings_local.py  urls.py  wsgi.py
main/: settings.py  settings_local.py  urls.py
scripts/: check_users.py
testData/: apps.py
testapi/: Untitled Diagram.drawio  models.py  serializers.py  urls.py  views.py
