[tool.poetry]
name = "test-backend"
version = "0.1.0"
description = ""
authors = ["Daniialbek Daniialov"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.2"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
